Fix main page spacing

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
   
   .main {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: flex-start;
     width: 100%;
     max-width: 900px;
